--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
+        nav{
+            background-color: rgb(28, 42, 69);
+            color: white;
+            padding: 20px 60px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        ul{
+           display: flex; 
+           gap: 40px;
+           list-style: none;
+           font-weight: 600;
+        }
+        li:hover{
+            color: aqua;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    
+    <nav >
+        <h1>Logo</h1>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
 </body>
 </html>
