header section created

--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
             color: aqua;
             text-decoration: underline;
         }
+        .header{
+            background-color: rgb(28, 42, 69);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 60px 100px;
+        }
+        img{
+            width: 50%;
+            height: 500px;
+        }
+        .header-text{
+            width: 50%;
+            padding: 0 150px;
+        }
+        h3{
+            color: aqua;
+        }
+        h1{
+            color: azure;
+        }
+        h4{
+            color: chocolate;
+        }
     </style>
 </head>
 <body>
@@ -40,5 +64,13 @@
             <li>Contact</li>
         </ul>
     </nav>
+    <div class="header">
+        <img src="/man.jpg" alt="">
+        <div class="header-text">
+            <h3>Hello!</h3>
+            <h1>Cristian Lopez</h1>
+            <h4>Web Developer</h4>
+        </div>
+    </div>
 </body>
 </html>
