hire section created

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         padding: 0;
         font-family: sans-serif;
       }
+      body {
+        background-color: rgb(28, 42, 69);
+      }
       nav {
         background-color: rgb(28, 42, 69);
         color: white;
@@ -63,10 +66,27 @@
         width: 50%;
         color: white;
       }
-      .btn{
+      .btn {
         padding: 10px;
         background-color: yellow;
         border-radius: 5px;
+      }
+      .hire{
+        background-color: rgb(15, 22, 36);
+        margin: 120px 100px;
+        padding: 100px;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        border-radius: 10px;
+      }
+      .hire-text{
+        width: 30%;
+        margin: auto;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
       }
     </style>
   </head>
@@ -90,8 +110,11 @@
     </div>
     <div class="contact">
       <div class="contact-text">
-        <h1>Any type of query <br> & disscussion</h1>
-        <p style="margin-top: 10px; line-height: 24px;">
+        <h1>
+          Any type of query <br />
+          & disscussion
+        </h1>
+        <p style="margin-top: 10px; line-height: 24px">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus,
           modi unde tenetur distinctio rerum culpa voluptatum nisi earum! Autem
           aperiam, placeat deserunt quo magnam dolorem quisquam est nisi
@@ -99,6 +122,19 @@
         </p>
       </div>
       <button class="btn">Contact me</button>
+    </div>
+    <div class="hire">
+      <img src="/man.jpg" alt="" />
+      <div class="hire-text">
+        <h1>Why hire me for your next project</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+          provident quo deleniti sapiente officiis modi numquam minima vero
+          omnis? Perspiciatis, temporibus molestiae. Tenetur deserunt non omnis,
+          laborum praesentium placeat esse.
+        </p>
+        <button class="btn">Lern More</button>
+      </div>
     </div>
   </body>
 </html>
