footer section created

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
         color: white;
         height: 50px;
       }
+      footer{
+        margin:50px 0 30px 0;
+        color: rgb(183, 181, 181);
+      }
     </style>
   </head>
   <body>
@@ -198,5 +202,8 @@
         <button class="btn">SUBMIT</button>
       </form>
     </div>
+    <footer>
+      <p style="text-align: center;">Copywrite by @ 2025</p>
+    </footer>
   </body>
 </html>
